--- a/bohn html-css/estilos.css
+++ b/bohn html-css/estilos.css
@@ -20,7 +20,7 @@
 .header {
     background-image: linear-gradient(to bottom, rgba(107, 104, 93, 0.8), #8e99a6);
     width: 100%;
-    height: 150px;
+    height: 140px;
     display: flex;
     align-items: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
@@ -154,7 +154,7 @@ a:hover {
   color: #c7c7c4;
 }
 .line-title {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding-bottom: 16px;
   font-size: 20px;
   line-height: 28px;
@@ -188,18 +188,18 @@ button {
 }
 .line-title::before {
   width: 100%;
-  background: #af994d;
+  background: #c7c7c4;
 }
 .line-title::after {
-  width: 32px;
-  background: #c7c7c4;
+  width: 90%;
+  background: #af994d;
 }
 
 
 /******* Middle section CSS Start ******/
 /* -------- Landing page ------- */
 .welcome-section {
-  padding: 40px 20px;
+  padding: 20px 20px;
   margin-top: 120px;
 }
 .welcome-section .owl-stage {
@@ -208,9 +208,9 @@ button {
   display: -webkit-flex;
 }
 .welcome-section .item {
-  margin: 0 15px 60px;
-  width: 350px;
-  height: 400px;
+  margin: 0 15px 40px;
+  width: 330px;
+  height: 380px;
   display: flex;
   display: -webkit-flex;
   align-items: flex-end;
@@ -269,6 +269,7 @@ button {
   margin-top: -20px;
   position: relative;
   z-index: 5;
+  color: #af994d;
 }
 
   /* titulos y secciones */
