--- a/bohn html-css/estilos.css
+++ b/bohn html-css/estilos.css
@@ -416,7 +416,7 @@ button {
   font-size: 30px;
   color: #fff;
 }
-
+/* resposive free evaluation */
 @media screen and (min-width:800px){
 	.custom-model-main:before {
 	  content: "";
@@ -428,7 +428,9 @@ button {
 	}
 }
 @media screen and (max-width:799px){
-  .custom-model-inner{margin-top: 45px;}
+  .custom-model-inner{
+    margin-top: 45px;
+  }
 }
 
 /* body - container treatments */
@@ -752,7 +754,7 @@ opacity: 0;
 
   /* -------- Landing page ------- */
   .welcome-section {
-    padding: 30px 0px 20px;
+    padding: 20px 0px 20px 0px;
   }
   .welcome-section .item {
     margin: 0 10px 40px;
