--- a/bohn html-css/estilos.css
+++ b/bohn html-css/estilos.css
@@ -313,7 +313,7 @@ button {
 }
 .logo-pop{
   padding: 20px 20px;
-  width: 300px;
+  width: 80%;
   align-items: center;
 }
 .pop-up-content-wrap h1, .title-pop{
