--- a/bohn html-css/estilos.css
+++ b/bohn html-css/estilos.css
@@ -337,7 +337,7 @@ button {
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0; /* z-index: 1050; */
+  left: 0; 
   -webkit-overflow-scrolling: touch;
   outline: 0;
   opacity: 0;
